--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,18 @@
 ---
 import Layout from '@layouts/Layout.astro';
 import Card from '@components/Card/index.tsx';
+import Form from '@components/Form/index.tsx';
+import Toast from '@components/Toast/index.tsx';
+import { createTodo } from '@components/Form/reactivity.ts';
 import { DBClient } from '@lib/db.ts';
+import { saveTodo } from '@pages/api/todo.ts';
 
 const todos = await DBClient.getTodos();
 ---
 <Layout title="TODO">
 	<main class="full flex justify-center items-center">
-    {todos.map(t => <Card client:load status={t.status} content={t.content}/>)}
+    {todos.map(t => <Card status={t.status} content={t.content}/>)}
+    <Form client:load />
 	</main>
+  <Toast client:idle />
 </Layout>
