--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ import { saveTodo } from '@pages/api/todo.ts';
 const todos = await DBClient.getTodos();
 ---
 <Layout title="TODO">
-	<main class="full flex space-y-3 flex-col justify-center items-center">
-    {todos.map(t => <Card status={t.status} content={t.content}/>)}
-    <Form client:load />
+	<main class="full flex flex-col justify-center items-center">
+    {todos.map(t => <Card status={t.status} id={t.id} content={t.content} client:load />)}
+    <Form client:idle />
 	</main>
   <Toast client:idle />
 </Layout>
