💃 Shake it all round

--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '@layouts/Layout.astro';
 import Card from '@components/Card/index.tsx';
 import Form from '@components/Form/index.tsx';
 import Toast from '@components/Toast/index.tsx';
+import TodoList from '@components/TodoList/index.tsx';
 import { createTodo } from '@components/Form/reactivity.ts';
 import { DBClient } from '@lib/db.ts';
 import { saveTodo } from '@pages/api/todo.ts';
@@ -13,6 +14,7 @@ const todos = await DBClient.getTodos();
 	<main class="full flex flex-col justify-center items-center">
     {todos.map(t => <Card status={t.status} id={t.id} content={t.content} client:load />)}
     <Form client:idle />
+    <TodoList client:load />
 	</main>
   <Toast client:idle />
 </Layout>
