🥂 Cheers to sad

--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -4,7 +4,7 @@ import Form from '@components/Form/index.tsx';
 import Toast from '@components/Toast/index.tsx';
 import TodoList from '@components/TodoList/index.tsx';
 ---
-<Layout title="TODO">
+<Layout title="STA">
 	<main class="full flex flex-col justify-center items-center">
     <TodoList client:load />
     <Form client:idle />
