🥸  Pourquoi mash po

--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -9,5 +9,5 @@ import TodoList from '@components/TodoList/index.tsx';
     <TodoList client:load />
     <Form client:idle />
 	</main>
-  <Toast client:idle />
+  <Toast client:load />
 </Layout>
