--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -5,9 +5,13 @@ import Toast from '@components/Toast/index.tsx';
 import TodoList from '@components/TodoList/index.tsx';
 ---
 <Layout title="STA">
-	<main class="full flex flex-col justify-center items-center">
-    <TodoList client:load />
-    <Form client:idle />
-	</main>
+  <main class="full flex-col">
+    <div class="grid p-3 w-full lg:grid-cols-3 pb-[120px] sm:grid-cols-2 grid-cols-1 overflow-scroll">
+      <TodoList client:load />
+    </div>
+    <div class="center w-full fixed bottom-0 border-t bg-gray-100">
+      <Form client:idle />
+    </div>
+  </main>
   <Toast client:load />
 </Layout>
