--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -9,14 +9,14 @@ const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<title>{title}</title>
 </head>
-<body>
+<body class="full">
 	<slot />
 </body>
 </html>
