--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '@assets/global.css';
 
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props as Props;
@@ -10,13 +10,14 @@ const { title } = Astro.props as Props;
 
 <!DOCTYPE html>
 <html lang="en" class="full">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<title>{title}</title>
-</head>
-<body class="full">
-	<slot />
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>{title}</title>
+    <script>var exports = {"__esModule": true};</script>
+  </head>
+  <body class="full">
+    <slot />
+  </body>
 </html>
