--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -9,15 +9,15 @@ const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="full">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
-    <script>var exports = {"__esModule": true};</script>
+    <script is:inline type="module" src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
   </head>
-  <body class="full">
+  <body>
     <slot />
   </body>
 </html>
