--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -16,6 +16,7 @@ const { title } = Astro.props as Props;
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
     <script is:inline type="module" src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
+    <script is:inline type="module" src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
   </head>
   <body>
     <slot />
