--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@assets/global.css';
+import Toast from '@components/Toast/index.tsx';
 
 export interface Props {
   title: string;
@@ -20,5 +21,6 @@ const { title } = Astro.props as Props;
   </head>
   <body>
     <slot />
+    <Toast client:load />
   </body>
 </html>
