--- a/front/src/assets/global.css
+++ b/front/src/assets/global.css
@@ -32,6 +32,12 @@
   .display-none {
     display: none;
   }
+
+  .transition-zoom {
+    transition-property: box-shadow, transform;
+    transition-duration: 150ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 @keyframes fadeout {
@@ -95,5 +101,22 @@ to {
       transform: scale(1.5);
       transition: all 0.5s;
     }
+  }
+
+  .rainbow {
+    background: linear-gradient(
+       90deg,
+        rgba(255, 0, 0, 1) 0%,
+        rgba(255, 154, 0, 1) 10%,
+        rgba(208, 222, 33, 1) 20%,
+        rgba(79, 220, 74, 1) 30%,
+        rgba(63, 218, 216, 1) 40%,
+        rgba(47, 201, 226, 1) 50%,
+        rgba(28, 127, 238, 1) 60%,
+        rgba(95, 21, 242, 1) 70%,
+        rgba(186, 12, 248, 1) 80%,
+        rgba(251, 7, 217, 1) 90%,
+        rgba(255, 0, 0, 1) 100%
+      )
   }
 }
