--- a/front/src/assets/global.css
+++ b/front/src/assets/global.css
@@ -38,6 +38,11 @@
     transition-duration: 150ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  .transition-slow {
+    transition-property: all;
+    transition-duration: 5s;
+  }
 }
 
 @keyframes fadeout {
