🍅 Slepobepo after refactor and UX/UI

--- a/front/src/assets/global.css
+++ b/front/src/assets/global.css
@@ -17,6 +17,12 @@
     @apply flex items-center justify-center;
   }
 
+  .fade-in {
+    animation-duration: 1s;
+    animation-name: fadein;
+    animation-iteration-count: 1;
+  }
+
   .appear {
     animation-duration: 1s;
     animation-name: slidein;
@@ -42,6 +48,15 @@
   .transition-slow {
     transition-property: all;
     transition-duration: 5s;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
@@ -110,18 +125,18 @@ to {
 
   .rainbow {
     background: linear-gradient(
-       90deg,
-        rgba(255, 0, 0, 1) 0%,
-        rgba(255, 154, 0, 1) 10%,
-        rgba(208, 222, 33, 1) 20%,
-        rgba(79, 220, 74, 1) 30%,
-        rgba(63, 218, 216, 1) 40%,
-        rgba(47, 201, 226, 1) 50%,
-        rgba(28, 127, 238, 1) 60%,
-        rgba(95, 21, 242, 1) 70%,
-        rgba(186, 12, 248, 1) 80%,
-        rgba(251, 7, 217, 1) 90%,
-        rgba(255, 0, 0, 1) 100%
+      90deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 154, 0, 1) 10%,
+      rgba(208, 222, 33, 1) 20%,
+      rgba(79, 220, 74, 1) 30%,
+      rgba(63, 218, 216, 1) 40%,
+      rgba(47, 201, 226, 1) 50%,
+      rgba(28, 127, 238, 1) 60%,
+      rgba(95, 21, 242, 1) 70%,
+      rgba(186, 12, 248, 1) 80%,
+      rgba(251, 7, 217, 1) 90%,
+      rgba(255, 0, 0, 1) 100%
       )
   }
 }
